--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,14 +1,17 @@
-@import "colors";
-@import "animations";
-@import "base";
-@import "typography";
-@import "components/buttons";
-@import "sections/header";
-@import "sections/hero";
-@import "components/socials";
-@import "sections/works";
-@import "components/card";
-@import "sections/about";
-@import "sections/contact";
-@import "components/contact-form";
-@import "sections/footer";
+@import 'colors';
+@import 'animations';
+@import 'base';
+@import 'typography';
+@import 'components/buttons';
+@import 'sections/header';
+@import 'sections/hero';
+@import 'components/socials';
+@import 'sections/works';
+@import 'components/tech-list';
+@import 'components/card';
+@import 'sections/about';
+@import 'sections/contact';
+@import 'components/contact-form';
+@import 'sections/footer';
+@import 'components/backdrop';
+@import 'components/modal-project';
