--- a/styles/main.css
+++ b/styles/main.css
@@ -42,7 +42,7 @@ html {
 }
 
 body {
-  font-family: "Inter", sans-serif;
+  font-family: 'Inter', sans-serif;
 }
 
 img {
@@ -57,7 +57,7 @@ a {
 
 a::after {
   position: absolute;
-  content: "";
+  content: '';
   width: 0;
   height: 2px;
   background-color: #ff6163;
@@ -88,7 +88,7 @@ ul {
 }
 
 .hidden {
-  display: none;
+  display: none !important;
 }
 
 .translated {
@@ -414,6 +414,30 @@ ul {
   }
 }
 
+.tech-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: 0.5rem;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.tech-list__item {
+  font-size: 0.6rem;
+  background-color: #f9eaea;
+  padding: 0.5em 0.6em;
+  border-radius: 4px;
+}
+
+.tech-list__item--skill {
+  background-color: #fff;
+  color: #ff6163;
+}
+
 .card {
   background-color: #f9eaea;
   border: 1px solid #c1c7d0;
@@ -693,5 +717,137 @@ ul {
 
 .section-footer__socials {
   margin-bottom: 1rem;
+}
+
+.backdrop {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(255, 231, 232, 0.8);
+}
+
+.modal-project {
+  position: fixed;
+  overflow-y: auto;
+  left: 50%;
+  top: 5%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  width: 95%;
+  max-width: 920px;
+  height: 90%;
+  padding: 1rem;
+  border-radius: 16px;
+  background-color: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 0.6rem;
+}
+
+.modal-project__close-btn {
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+  border: none;
+  background-color: transparent;
+}
+
+@media (min-width: 860px) {
+  .modal-project__close-btn {
+    grid-column: 2 / -1;
+    -ms-grid-column-align: end;
+        justify-self: end;
+  }
+}
+
+.modal-project__img {
+  max-height: 250px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+@media (min-width: 860px) {
+  .modal-project__img {
+    grid-column: 1 / -1;
+    width: 100%;
+    max-height: 400px;
+  }
+}
+
+@media (min-width: 860px) {
+  .modal-project__title {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1 / 2;
+    -ms-grid-row: 3;
+    -ms-grid-row-span: 1;
+    grid-row: 3 / 4;
+  }
+}
+
+.modal-project__tech-list {
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+
+@media (min-width: 860px) {
+  .modal-project__tech-list {
+    -ms-grid-row: 4;
+    -ms-grid-row-span: 1;
+    grid-row: 4 / 5;
+  }
+}
+
+.modal-project__text {
+  font-size: 0.8rem;
+  text-align: left;
+}
+
+@media (min-width: 860px) {
+  .modal-project__text {
+    -ms-grid-row: 5;
+    -ms-grid-row-span: 1;
+    grid-row: 5 / 6;
+    grid-column: 1 / -1;
+  }
+}
+
+.modal-project__buttons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 0.6rem;
+}
+
+@media (min-width: 860px) {
+  .modal-project__buttons {
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+    -ms-grid-row: 3;
+    -ms-grid-row-span: 1;
+    grid-row: 3 / 4;
+  }
+}
+
+@media (min-width: 860px) {
+  .modal-project {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-rows: auto auto auto auto auto;
+        grid-template-rows: auto auto auto auto auto;
+    -ms-grid-columns: 70% 1fr;
+        grid-template-columns: 70% 1fr;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
 }
 /*# sourceMappingURL=main.css.map */
