--- a/styles/components/_modal-project.scss
+++ b/styles/components/_modal-project.scss
@@ -28,6 +28,7 @@
   &__img {
     max-height: 250px;
     object-fit: cover;
+    border-radius: 8px;
 
     @media (min-width: 860px) {
       grid-column: 1 / -1;
