Restyle the popup modal

--- a/styles/components/_backdrop.scss
+++ b/styles/components/_backdrop.scss
@@ -3,6 +3,8 @@
   left: 0;
   top: 0;
   width: 100%;
-  height: 100vh;
-  background-color: rgba($color-secondary, 0.8);
+  height: 100%;
+  overflow-y: auto;
+  background-color: rgba($color-secondary, 0.5);
+  backdrop-filter: blur(3px);
 }
