--- a/styles/main.css
+++ b/styles/main.css
@@ -725,20 +725,21 @@ ul {
   left: 0;
   top: 0;
   width: 100%;
-  height: 100vh;
-  background-color: rgba(255, 231, 232, 0.8);
+  height: 100%;
+  overflow-y: auto;
+  background-color: rgba(255, 231, 232, 0.5);
+  -webkit-backdrop-filter: blur(3px);
+          backdrop-filter: blur(3px);
 }
 
 .modal-project {
-  position: fixed;
-  overflow-y: auto;
+  position: absolute;
   left: 50%;
   top: 5%;
   -webkit-transform: translateX(-50%);
           transform: translateX(-50%);
   width: 95%;
   max-width: 920px;
-  height: 90%;
   padding: 1rem;
   border-radius: 16px;
   background-color: #fff;
@@ -768,7 +769,7 @@ ul {
 }
 
 .modal-project__img {
-  max-height: 250px;
+  height: 40vw;
   -o-object-fit: cover;
      object-fit: cover;
   border-radius: 8px;
@@ -778,7 +779,6 @@ ul {
   .modal-project__img {
     grid-column: 1 / -1;
     width: 100%;
-    max-height: 400px;
   }
 }
 
