Add icons to the modal cta buttons

--- a/styles/components/_modal-project.scss
+++ b/styles/components/_modal-project.scss
@@ -63,6 +63,11 @@
     display: flex;
     gap: 0.6rem;
 
+    .btn-cta {
+      display: flex;
+      gap: 7px;
+    }
+
     @media (min-width: 860px) {
       justify-content: flex-end;
       grid-row: 3 / 4;
