--- a/styles/components/_modal-project.scss
+++ b/styles/components/_modal-project.scss
@@ -16,6 +16,7 @@
     align-self: flex-end;
     border: none;
     background-color: transparent;
+    cursor: pointer;
 
     @media (min-width: 860px) {
       grid-column: 2 / -1;
@@ -35,6 +36,8 @@
   }
 
   &__title {
+    align-self: start;
+
     @media (min-width: 860px) {
       grid-column: 1 / 2;
       grid-row: 3 / 4;
