Style the email form validation

--- a/styles/components/_contact-form.scss
+++ b/styles/components/_contact-form.scss
@@ -18,4 +18,9 @@
       background-color: rgba($color-secondary-light, 0.3);
     }
   }
+
+  &__error {
+    color: red;
+    font-size: 0.6rem;
+  }
 }
