--- a/styles/main.css
+++ b/styles/main.css
@@ -91,6 +91,10 @@ ul {
   display: none !important;
 }
 
+.invisible {
+  opacity: 0;
+}
+
 .translated {
   -webkit-transform: translateX(150%);
           transform: translateX(150%);
@@ -704,6 +708,11 @@ ul {
   outline: none;
   border: 1px solid #ff6163;
   background-color: rgba(249, 234, 234, 0.3);
+}
+
+.contact-form__error {
+  color: red;
+  font-size: 0.6rem;
 }
 
 .section-footer {
