Fix form validation script and add error animation

--- a/styles/components/_contact-form.scss
+++ b/styles/components/_contact-form.scss
@@ -24,3 +24,21 @@
     font-size: 0.6rem;
   }
 }
+
+.shake {
+  animation: shake 1s alternate-reverse;
+}
+
+@keyframes shake {
+  0% {
+    transform: skewX(10deg) translateX(-5px);
+  }
+
+  50% {
+    transform: skewX(-10deg) translateX(5px);
+  }
+
+  100% {
+    transform: skewX(0) translateX(0);
+  }
+}
