--- a/styles/main.css
+++ b/styles/main.css
@@ -28,6 +28,44 @@
   }
 }
 
+@-webkit-keyframes shake {
+  0% {
+    -webkit-transform: skewX(0) translateX(0);
+            transform: skewX(0) translateX(0);
+  }
+  25% {
+    -webkit-transform: skewX(-10deg) translateX(5px);
+            transform: skewX(-10deg) translateX(5px);
+  }
+  50% {
+    -webkit-transform: skewX(10deg);
+            transform: skewX(10deg);
+  }
+  100% {
+    -webkit-transform: skewX(0) translateX(0);
+            transform: skewX(0) translateX(0);
+  }
+}
+
+@keyframes shake {
+  0% {
+    -webkit-transform: skewX(0) translateX(0);
+            transform: skewX(0) translateX(0);
+  }
+  25% {
+    -webkit-transform: skewX(-10deg) translateX(5px);
+            transform: skewX(-10deg) translateX(5px);
+  }
+  50% {
+    -webkit-transform: skewX(10deg);
+            transform: skewX(10deg);
+  }
+  100% {
+    -webkit-transform: skewX(0) translateX(0);
+            transform: skewX(0) translateX(0);
+  }
+}
+
 *,
 *::after,
 *::before {
@@ -716,37 +754,7 @@ ul {
 }
 
 .shake {
-  animation: shake 1s alternate-reverse;
-}
-
-@-webkit-keyframes shake {
-  0% {
-    -webkit-transform: skewX(10deg) translateX(-5px);
-            transform: skewX(10deg) translateX(-5px);
-  }
-  50% {
-    -webkit-transform: skewX(-10deg) translateX(5px);
-            transform: skewX(-10deg) translateX(5px);
-  }
-  100% {
-    -webkit-transform: skewX(0) translateX(0);
-            transform: skewX(0) translateX(0);
-  }
-}
-
-@keyframes shake {
-  0% {
-    -webkit-transform: skewX(10deg) translateX(-5px);
-            transform: skewX(10deg) translateX(-5px);
-  }
-  50% {
-    -webkit-transform: skewX(-10deg) translateX(5px);
-            transform: skewX(-10deg) translateX(5px);
-  }
-  100% {
-    -webkit-transform: skewX(0) translateX(0);
-            transform: skewX(0) translateX(0);
-  }
+  animation: shake 0.7s alternate-reverse;
 }
 
 .section-footer {
