--- a/styles/components/_modal-project.scss
+++ b/styles/components/_modal-project.scss
@@ -1,8 +1,16 @@
+.backdrop {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow-y: auto;
+  background-color: rgba($color-secondary, 0.5);
+  backdrop-filter: blur(3px);
+}
+
 .modal-project {
-  position: absolute;
-  left: 50%;
-  top: 5%;
-  transform: translateX(-50%);
+  margin: 5vh auto;
   width: 95%;
   max-width: 920px;
   padding: 1rem;
