--- a/styles/components/_card.scss
+++ b/styles/components/_card.scss
@@ -8,7 +8,7 @@
 
   &__portfolio-img {
     width: 100%;
-    height: 10rem;
+    height: 50%;
     object-fit: cover;
   }
 
@@ -16,13 +16,14 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     gap: 0.8rem;
     text-align: center;
     border-radius: 8px;
     background-color: $color-white;
-    padding: 1.2rem;
+    padding: 2rem;
     width: 100%;
-    height: 100%;
+    min-height: 50%;
   }
 
   &__list {
