--- a/styles/main.css
+++ b/styles/main.css
@@ -496,7 +496,7 @@ ul {
 
 .card__portfolio-img {
   width: 100%;
-  height: 10rem;
+  height: 50%;
   -o-object-fit: cover;
      object-fit: cover;
 }
@@ -512,13 +512,16 @@ ul {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   gap: 0.8rem;
   text-align: center;
   border-radius: 8px;
   background-color: #fff;
-  padding: 1.2rem;
+  padding: 2rem;
   width: 100%;
-  height: 100%;
+  min-height: 50%;
 }
 
 .card__list {
